# TeslaInfotainment

./: CMakeLists.txt  Main.qml  MapComponent.qml  README.md  main.cpp
Controllers/: AudioController.cpp  AudioController.h  AudioInfo.cpp  AudioInfo.h  AudioSearchModel.cpp  AudioSearchModel.h  HVACHandler.cpp  HVACHandler.h  PlayerController.cpp  PlayerController.h  System.cpp  System.h
ui/: AudioInfoBox.qml  BottomBar.qml  HVACComponent.qml  ImageButton.qml  LeftScreen.qml  MapComponent.qml  NavigationSearchBox.qml  PlayerControllerComponent.qml  PlaylistPanel.qml  RightScreen.qml  SearchField.qml  SearchPanel.qml  VideoPlayerFullscreenWindow.qml  VolumeControlComponent.qml
ui/BottomBar/: BottomBar.qml  HVACComponent.qml  ImageButton.qml  PlayerControllerComponent.qml  PlaylistPanel.qml  VolumeControlComponent.qml
ui/LeftScreen/: LeftScreen.qml
ui/RightScreen/: MapComponent.qml  NavigationSearchBox.qml  RightScreen.qml
